# app

./: .gitignore  CMakeLists.txt  README.md  helloworld.cpp  logo.md  main.back
base/: event.h  uiObject.cpp  uiObject.h
main/: main.cpp
module/event_manager/: eventManager.cpp  eventManager.h
module/media_module/: mediaModule.cpp  mediaModule.h
module/ui_manager/: uiManager.cpp  uiManager.h
ui/page/home/: mainPage.cpp  mainPage.h
ui/page/main/: mainPage.cpp  mainPage.h
ui/page/map/: mapPage.cpp  mapPage.h
ui/page/settings/: settingsPage.cpp  settingsPage.h
ui/page/status_bar/: statusBar.cpp  statusBar.h
ui/page/system/: systemPage.cpp  systemPage.h
ui/page/welcome/: welcomePage.cpp  welcomePage.h
